2008-01-17  John Robeson <johnny@localmomentum.net>

    Make mandatory attribute in metadata xml files work
    Patch from https://bugzilla.redhat.com/show_bug.cgi?id=253996  
    by Josko Plazonic

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.21.0.

	* NEWS: Prepare for 2.21.0.

2008-01-15  John Robeson <johnny@localmomentum.net>

    Add more ignored files/directories to lib/config.py.in

2008-01-06  John Robeson <johnny@localmomentum.net>

    Change install xinitrc to no for slackware

2008-01-06  John Robeson <johnny@localmomentum.net>

    Make sabayon work on slackware
    
    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=497471
    patch by Jared 

2008-01-06  John Robeson <johnny@localmomentum.net>

    Python 2.4 compatibility path for gettext/ngettext
    
    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=480508 
    patch by Loïc Minier

2008-01-05  Josh Triplett  <josh@freedesktop.org>

	* admin-tool/lockdown/lockdowncombo.py:
	Remove shebang from additional non-executable Python script (not
	in original Debian patch).

2008-01-05  John William Robeson <johnny@localmomentum.net>

	Remove shebang line from non-executable python scripts 
	Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=424328

2007-12-19  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=474666 - In X
	startup scripts, a way is needed to detect if there was no user
	profile for the user.

	* lib/util.py (EXIT_CODE_NO_USER_PROFILE): New exit code of 3 for
	sabayon-apply when no user profile can be found for the user.

	* admin-tool/sabayon-apply: Exit with
	util.EXIT_CODE_NO_USER_PROFILE if no profile is found for the user.

2007-12-19  Federico Mena Quintero  <federico@novell.com>

	* lib/storage.py (copy_tree): Create all the directories in the
	path (mkdir -p).  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=486216 - patch by Dan Walsh.
