@@ -16,6 +16,8 @@ Version 2.21.0
 
 	* New Hebrew translation courtesy of Yair Hershkovitz.
 
+	* We no longer ship a sample specfile, since it was pretty obsolete.
+
   Fixes:
 
 	* Fix syntax errors that were only caught at runtime :(
