@@ -6,6 +6,12 @@
 
 2008-01-17  Federico Mena Quintero  <federico@novell.com>
 
+	* sabayon.spec.in: Removed; this specfile is really obsolete anyway.
+
+	* Makefile.am: Remove references to the specfile.
+
+2008-01-17  Federico Mena Quintero  <federico@novell.com>
+
 	* configure.ac: Bump version number to 2.21.0.
 
 	* NEWS: Prepare for 2.21.0.
